# qlib

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: data.yaml  qlib.yaml  risk.yaml  strategy.yaml
data/cache/: stock_601138_20230101_20260222.parquet  stock_601138_20230601_20260222.parquet  stock_601138_20240101_20260222.parquet
docs/plans/: 2026-02-21-qlib-ai-strategy-design.md  2026-02-22-turtle-genetic-optimizer-design.md  2026-02-25-turtle-optimizer-enhancement-design.md  2026-02-25-turtle-optimizer-enhancement-plan.md  2026-03-04-adaptive-market-turtle-optimizer-design.md  2026-03-04-incremental-evolution-design.md  2026-03-04-market-adaptive-strategy-selection-design.md
reports/: test_summary.html
reports/html/: turtle_optimization_601138_20260222_132145.html  turtle_optimization_601138_20260222_135102.html  turtle_optimization_601138_20260222_150143.html  turtle_optimization_601138_20260223_000718.html
scripts/: factor_exploration.py  generate_report.py  low_drawdown_report.py  optimize_strategy.py  refresh_cache.py  run_agent.py  run_analysis.py  run_backtest.py  turtle_genetic_optimizer.py  update_data.py
skills/turtle_optimizer/: SKILL.md
src/: __init__.py
src/agent/: __init__.py  prompts.py  tools.py
src/analysis/: __init__.py  metrics.py  report.py  visualizer.py
src/backtest/: __init__.py  multi_period.py  runner.py  turtle_backtest.py
tests/: test_advanced_strategy.py  test_agent.py  test_analysis.py  test_backtest.py  test_data_loader.py  test_factors.py  test_optimization.py  test_regime.py  test_risk.py  test_strategy.py
(+93 files in other folders)
